target data loading commit

--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,9 @@
 source_list:
   - ADDR
 
+target_list:
+  - REGIS_DIM
+  -
 OL:
   sftp_conf:
       filetype: csv
@@ -15,7 +18,7 @@ SB:
 
 CP:
   s3_conf:
-    s3_bucket: vinaysbt
+    s3_bucket: thousif-test123
     filename: KC_Extract_1_20171009.csv
 
 ADDR:
@@ -24,9 +27,25 @@ ADDR:
     collection: address
 
 
+REGIS_DIM:
+    tableName: DATAMART.REGIS_DIM
+    source_data: CP
+    loadingQuery: >
+    SELECT
+      DATAMART.FN_UUID() AS REGIS_KEY, REGIS_CNSM_ID AS CNSM_ID,REGIS_CTY_CODE AS CTY_CODE,
+      REGIS_ID, REGIS_DATE, REGIS_LTY_ID AS LTY_ID, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
+    FROM
+      (SELECT
+        DISTINCT REGIS_CNSM_ID, CAST(REGIS_CTY_CODE AS SMALLINT), CAST(REGIS_ID AS INTEGER),
+        REGIS_LTY_ID, REGIS_DATE, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
+       FROM
+        CP
+       WHERE
+         INS_DT = CURRENT_DATE
+      ) CP
 
 s3_conf:
-  s3_bucket: vinaysbt
+  s3_bucket: thousif-test123
   staging_dir: staging
 
 
