--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,9 @@ source_list:
 
 target_list:
   - REGIS_DIM
-  -
+  - CHILD_DIM
+  - RTL_TXN_FACT
+
 OL:
   sftp_conf:
       filetype: csv
@@ -31,18 +33,57 @@ REGIS_DIM:
     tableName: DATAMART.REGIS_DIM
     source_data: CP
     loadingQuery: >
-    SELECT
-      DATAMART.FN_UUID() AS REGIS_KEY, REGIS_CNSM_ID AS CNSM_ID,REGIS_CTY_CODE AS CTY_CODE,
-      REGIS_ID, REGIS_DATE, REGIS_LTY_ID AS LTY_ID, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
-    FROM
-      (SELECT
-        DISTINCT REGIS_CNSM_ID, CAST(REGIS_CTY_CODE AS SMALLINT), CAST(REGIS_ID AS INTEGER),
-        REGIS_LTY_ID, REGIS_DATE, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
-       FROM
-        CP
-       WHERE
-         INS_DT = CURRENT_DATE
-      ) CP
+      SELECT
+        DATAMART.FN_UUID() AS REGIS_KEY, REGIS_CNSM_ID AS CNSM_ID,REGIS_CTY_CODE AS CTY_CODE,
+        REGIS_ID, REGIS_DATE, REGIS_LTY_ID AS LTY_ID, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
+      FROM
+        (SELECT
+          DISTINCT REGIS_CNSM_ID, CAST(REGIS_CTY_CODE AS SMALLINT), CAST(REGIS_ID AS INTEGER),
+          REGIS_LTY_ID, REGIS_DATE, REGIS_CHANNEL, REGIS_GENDER, REGIS_CITY, INS_DT
+         FROM
+          CP
+         WHERE
+           INS_DT = CURRENT_DATE
+        ) CP
+
+CHILD_DIM:
+    tableName: DATAMART.CHILD_DIM
+    source_data: CP
+    loadingQuery: >
+        SELECT
+            DATAMART.FN_UUID() CHILD_KEY, REGIS_CNSM_ID, REGIS_CTY_CODE, CHILD_ID, CHILD_NB, CHILD_GENDER, INS_DT
+        FROM
+          (SELECT DISTINCT REGIS_CNSM_ID, REGIS_CTY_CODE, CHILD_ID, CHILD_NB, CHILD_GENDER, INS_DT
+           FROM
+            STAGING_STG_1CP
+           WHERE
+            INS_DT = CURRENT_DATE
+            AND CHILD_ID IS NOT NULL
+          ) CP
+
+RTL_TXN_FACT:
+    sourceTable: [${conf.STAGING_SCHEMA}".STG_TRANSACTION_SYNC", ${conf.STAGING_SCHEMA}".STG_OL_TRANSACTION_SYNC",
+      ${conf.DATAMART_SCHEMA}".REGIS_DIM" ]
+    tableName = ${conf.DATAMART_SCHEMA}".RTL_TXN_FCT"
+    loadingQuery: >
+      SELECT
+       Datamart.FN_UUID() AS RTL_TXN_KEY, CAST(TXN.APP_TRANSACTION_ID AS STRING)AS TXN_ID, SIZE(split(REC.PRODUCTS, ',')) AS TXN_ITEM_QTY,
+       TRANSACTION_POINT_VALUE AS TXN_LOY_VAL_STD_CCY, 0 AS TXN_GROSS_MNY_STD_CCY, TRANSACTION_RETAIL_VALUE AS TXN_GROSS_MNY_LCL_CCY,
+       -1 AS MNY_LCL_CCY_TYPE_KEY, TRANSACTION_EXTERNAL_REFERENCE AS RTL_TXN_TYPE_KEY, ACTIVITY_TIMESTAMP AS TXN_TS,
+       CAST(ACTIVITY_TIMESTAMP AS DATE) AS TXN_DT_KEY, HOUR(ACTIVITY_TIMESTAMP) AS TXN_TM_HOUR, MINUTE(ACTIVITY_TIMESTAMP) AS TXN_TM_MINUTE,
+       SECOND(ACTIVITY_TIMESTAMP) AS TXN_TM_SECOND, '-1' AS CHNL_KEY, REG.CNSM_ID AS CNSM_ID,
+       "@NULL@" AS RTL_TXN_EXT_DEC_1, "@NULL@" AS RTL_TXN_EXT_DEC_2, REC.BASE_POINT_VALUE AS
+       RTL_TXN_EXT_DEC_3, MOBILE_UID AS RTL_TXN_EXT_CHAR_1, MOBILE_OS AS RTL_TXN_EXT_CHAR_2, PRODUCTS AS RTL_TXN_EXT_CHAR_3,
+       RECEIPT_STATUS AS RTL_TXN_EXT_CHAR_4, CAST(MSG_CODE AS BIGINT) AS RTL_TXN_EXT_CHAR_5, TXN.INS_TS AS INS_TS
+      FROM
+       """${conf.STAGING_SCHEMA}"""_STG_TRANSACTION_SYNC TXN LEFT OUTER JOIN """${conf.STAGING_SCHEMA}"""_STG_OL_TRANSACTION_SYNC REC
+       ON (TXN.APP_TRANSACTION_ID = REC.SBLP_TRANSACTION_ID )
+       LEFT OUTER JOIN """${conf.DATAMART_SCHEMA}"""_REGIS_DIM REG
+       ON TXN.LOYALTY_ID = REG.CNSM_ID
+      WHERE
+        TXN.INS_TS = CURRENT_DATE
+         AND REC.INS_TS = CURRENT_DATE OR CAST(REC.INS_TS AS DATE) is NULL )
+
 
 s3_conf:
   s3_bucket: thousif-test123
